[package]
name = "freight_car_forwarder"
version = "0.1.1"
edition = "2021"
authors = ["Robert Heller <heller@deepsoft.com>"]
description = "Port of the C++ port of Timothy O'Connor's Freight Car Forwarding system."
license = "GPL-2.0-only"
license-file = "COPYING"
repository = "https://github.com/RobertPHeller/freight_car_forwarder"

[dependencies]
getopts = "0.2"
cairo-rs = { version = "0.21.1" , features = ["pdf"] }
pango = "0.21.1"
pango-sys = "0.21.1"
pangocairo = "0.21.1"
rand = "0.9.2"
date_time = "2"
crossterm = "0.27"
