[package]
name = "freight_car_forwarder"
version = "0.1.6"
edition = "2021"
authors = ["Robert Heller <heller@deepsoft.com>"]
description = "Port of the C++ port of Timothy O'Connor's Freight Car Forwarding system."
license = "GPL-2.0-only"
repository = "https://github.com/RobertPHeller/freight_car_forwarder"
documentation = "https://docs.rs/freight_car_forwarder"
readme = "README.md"
keywords = ["model-railway", "railroad", "model-railroad", "switch-lists" , "freight-operations"]
categories = ["command-line-utilities", "games", "simulation"]

[dependencies]
getopts = "0.2"
cairo-rs = { version = "0.21.1" , features = ["pdf"] }
pango = "0.21.1"
pango-sys = "0.21.1"
pangocairo = "0.21.1"
rand = "0.9.2"
date_time = "2"
crossterm = "0.27"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.22.2"
